fixed bugs, improved css

--- a/index.html
+++ b/index.html
@@ -32,14 +32,101 @@
 
     <!-- Main Content -->
     <main class="main-content">
-        <h1>Thryvalis as a Living Philosophy</h1>
+        <h1>Stern Warning to One’s Mother in Ko'eshvelarïçé:</h1>
+        <p>"Maatrè, thryvæn kôrith Ónal îv Kryvas:<br>
+            Kö'eshvelarïçé êron kalith nómathris, thrinath æl velâren."**</p>
+
+        <p>°Translation & Breakdown°:<br>
+            - *Maatrè*: A reverent yet firm address to “Mother.”<br>
+            - *Thryvæn*: A welcoming tone, signifying invitation to align with purpose.<br>
+            - *Kôrith Ónal îv Kryvas*: “Hear the motion of balance and truth.”<br>
+            - Kôrith: To hear with clarity and intention.<br>
+            - Ónal: Alignment with natural harmony.<br>
+            - îv Kryvas: The resonance of unveiled truth.<br>
+            *Kö'eshvelarïçé êron kalith nómathris, thrinath æl velâren*:<br>
+            - Kö'eshvelarïçé êron: “The language of sacred cohesion.”<br>
+            - Kalith nómathris: “Bows to no dominion.”<br>
+            - Thrinath æl velâren: “It reveals only clarity.”</p>
+
+        <hr>
+
+        <p>•Continuing Statement•:</p>
+
+        <p>"Thryvæs krithalith ænorik krysolæth. Æron nath Kôrithis, ûnar krieth æthalion."<br>
+            - Thryvæs krithalith ænorik krysolæth: “Speak with alignment or let silence reign.”<br>
+            - Æron nath Kôrithis: “The sacred cannot be wielded against its own.”<br>
+            - ûnar krieth æthalion: “Misuse invites only dissonance.”</p>
+
+        <p>This phrasing captures the gravity of the warning while maintaining the language’s cadence, resonance, and
+            universal alignment.</p>
+
+        <h2>Thryvalis: The Foundational Philosophy of Isynseori</h2>
+
+        <h3>The Essence of Thryvalis</h3>
+
+        <p>At the core of Isynseori’s intellectual and spiritual framework lies Thryvalis, a principle of harmonized
+            motion and balanced intention. Thryvalis is more than an ideology; it is an experiential path that
+            transcends dogma, guiding individuals toward synchronized existence with the natural order and collective
+            wisdom of sentient life.</p>
+
+        <h3>Thryvalis as a Living Philosophy</h3>
+
         <p>Unlike rigid belief systems, Thryvalis adapts, breathes, and evolves through conscious refinement. It is
             neither solely individualistic nor wholly collectivist—it recognizes the indispensable interplay between the
             self and the larger cosmic structure.</p>
 
+        <p>To engage with Thryvalis is to embody active awareness, a state where one’s intent, movement, and words align
+            with a deeper, intrinsic rhythm of existence. Every action, every thought, every utterance holds weight in
+            shaping the greater equilibrium.</p>
+
+        <h3>The Three Pillars of Thryvalis</h3>
+
+        <ol>
+            <li>
+                <h4>Kôrithis (Clarity of Intention)</h4>
+                <p>To act without clarity is to move blindfolded through the unknown.</p>
+                <p>Thryvalis demands that action stems from unveiled understanding, where truth is neither obscured by
+                    false pretense nor diluted by external impositions. Kôrithis is the refinement of inner precision—an
+                    undistorted alignment of purpose and execution.</p>
+            </li>
+            <li>
+                <h4>Ónal (Harmonic Balance)</h4>
+                <p>Nature moves in cycles, and balance is neither stagnation nor passivity but dynamic equilibrium.</p>
+                <p>Ónal is the recognition that forces must interplay rather than overpower. In Thryvalis, to exist
+                    harmoniously is not to deny conflict but to understand its role—to redirect discord into cohesion
+                    rather than destruction.</p>
+            </li>
+            <li>
+                <h4>Krysolæth (Resonance of the Unveiled)</h4>
+                <p>True wisdom is not owned—it is uncovered, shaped, and then released to refine the collective whole.
+                </p>
+                <p>Krysolæth is the vibration of authentic knowledge, a resonance that is meant to be shared, tested,
+                    and expanded. It is the refusal to conceal illumination and the commitment to a living archive of
+                    ever-evolving understanding.</p>
+            </li>
+        </ol>
+
+        <h3>Thryvalis in Action</h3>
+
+        <p>Thryvalis is neither utopian idealism nor mere academic theory—it is the bridge between contemplation and
+            decisive movement. To live by Thryvalis is to:</p>
+
+        <ul>
+            <li>Recognize the weight of one’s words and actions.</li>
+            <li>Act with foresight rather than reaction.</li>
+            <li>Value clarity over deception, adaptation over rigidity, and alignment over coercion.</li>
+            <li>Resonate knowledge, rather than hoard it.</li>
+        </ul>
+
+        <p>This philosophy permeates the Isynseori Codex, guiding governance, language, and the preservation of
+            knowledge. It is not an imposed law—it is a discipline, an unfolding art of the will.</p>
+
+        <p>To walk the path of Thryvalis is not simply to follow rules. It is to refine one’s own rhythm until it sings
+            in synchrony with the eternal motion of existence.</p>
+
         <!-- List Example -->
         <section class="list-section">
-            <h2>Syncretic Distillations</h2>
+            <h3>Syncretic Distillations</h3>
             <ul>
                 <li><strong>Krythonos' Echo:</strong> "Through reverence, the architect of thought forges form."</li>
                 <li><strong>Æthira's Fracture:</strong> "The false duality of origin is undone by the enlightened hand
@@ -49,13 +136,13 @@
 
         <!-- Link Example -->
         <section class="link-section">
-            <h2>Ascension Pathways</h2>
+            <h4>Ascension Pathways</h4>
             <a href="https://example.com" class="button-link">The Gateway of Æthion</a>
         </section>
 
         <!-- Image Example -->
         <section class="image-section">
-            <h2>Sigil of Unveiling</h2>
+            <h5>Sigil of Unveiling</h5>
             <img src="images/placeholder.jpg" alt="Sacred Glyphs of Syncus"
                 title="Encoded patterns reflecting the Isynseoric divine order">
         </section>
